--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -16,6 +16,7 @@ tableId=Employee Id
 tableName=Name
 tableCountry=Country
 tableCity=City
+tableShowDetails=Show Details
 
 #Labels Buttons
 btnFilter=Filter
@@ -27,3 +28,7 @@ hideCity=Hide City
 orderID=Order ID
 freight=Freight
 shipAddress=Ship Address
+
+#Dialog Orders
+orders=Orders
+close=Close
