11 Layouts - Last Changes

--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -36,3 +36,11 @@ close=Close
 #Layout
 layout=Layout
 employeeDetails=Employee Details
+
+#Employee Details
+employeeID=Employee ID
+titleEmployee=Tile
+countryCode=Country Code
+city=City
+postalCode=Postal Code
+
