--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -44,3 +44,17 @@ countryCode=Country Code
 city=City
 postalCode=Postal Code
 
+#Incidence
+incidence=Incidence
+europe=Europe
+us=United States
+createIncidence=Create Incidence
+incidenceDate=Date
+incidenceReason=Reason
+incidenceType=Type
+incidenceCorrect=Correct
+incidencePending=Pending
+incidenceError=Error
+today=Today
+tomorrow=Tomorrow
+yesterday=Yesterday
