--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -39,7 +39,7 @@ employeeDetails=Employee Details
 
 #Employee Details
 employeeID=Employee ID
-titleEmployee=Tile
+titleEmployee=Title
 countryCode=Country Code
 city=City
 postalCode=Postal Code
@@ -58,3 +58,12 @@ incidenceError=Error
 today=Today
 tomorrow=Tomorrow
 yesterday=Yesterday
+
+#OData
+odataSaveOK=Incidence Saved
+odataSaveKO=Incidence NOT Saved
+odataNoChanges=No changes have been made
+odataUpdateOK=Incidence Updated
+odataUpdateKO=Incidence NOT Updated
+odataDeleteOK=Incidence Deleted
+odataDeleteKO=Incidence NOT Deleted
