--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -75,3 +75,8 @@ odataDeleteKO=Incidence NOT Deleted
 
 #Signature
 clear=Clear
+
+#Order Details
+orderProducts=Products
+availableStock=Available Stock
+
